# OpenGL_space

./: CMakeLists.txt  Camera.h  Cubemap.cpp  Cubemap.h  Engine.cpp  Engine.h  README.md  Shader.h  Sphere.cpp  Sphere.h  main.cpp
shaders/: cubemap.frag  earth.frag  earth.vert  sun.frag
